# robot-viewer

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
src/robot_viewer/: __init__.py  app.py  cli.py  ik.py  load_pipeline.py  loader.py  mjcf.py  model_sources.py  robot_data.py  scene.py  scene_sync.py  state.py  ui.py  urdf_to_mjcf.py  utils.py  viewer.py
tests/: test_app_startup.py  test_load_pipeline.py  test_mjcf.py  test_model_sources.py  test_scene_helpers.py
