[project]
authors = [{ name = "Zixing Jiang", email = "ZixingJiang@outlook.com" }]
dependencies = ["xacrodoc>=2.0.0,<3", "tyro>=1.0.11,<2", "viser>=1.0.24,<2"]
name = "robot-viewer"
requires-python = "==3.13"
version = "0.1.0"

[project.scripts]
rv = "robot_viewer.cli:run"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
robot_viewer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.13"
qpsolvers = ">=4.10.0,<5"
pink = ">=4.1.0,<5"
robot_descriptions = ">=1.23.0,<2"
