[project]
name = "robot-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Zixing Jiang", email = "ZixingJiang@outlook.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "mypy>=1.19.1",
    "pin-pink>=4.1.0",
    "qpsolvers[open-source-solvers]>=4.10.0",
    "robot-descriptions>=1.23.0",
    "tyro>=1.0.9",
    "viser>=1.0.24",
    "xacrodoc>=2.0.0",
    "yourdfpy>=0.0.60",
]

[project.optional-dependencies]
mjcf = [
    "mujoco>=3.2",
    "mink>=1.1",
    "trimesh>=4.0",
]

[project.scripts]
rv = "robot_viewer.cli:run"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
